fix: y axis alignment

--- a/src/components/line-chart/line-chart.css
+++ b/src/components/line-chart/line-chart.css
@@ -23,20 +23,33 @@
   margin-bottom: 30px;
 }
 
+.lineChart__title-x,
+.lineChart__title-y {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .lineChart__title-x,
+  .lineChart__title-y {
+    display: block;
+  }
+}
+
 .lineChart__title-y {
   grid-column: 1;
   grid-row: 2;
   justify-self: center;
   align-self: center;
-  writing-mode: sideways-lr;
-  margin: 20px 20px 0 0;
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+  padding-left: 20px;
 }
 
 .lineChart__title-x {
   grid-column: 2;
   grid-row: 3;
   justify-self: center;
-  margin-top: 20px;
+  padding-top: 20px;
 }
 
 .lineChart__chart {
@@ -55,10 +68,9 @@
 .lineChart__chart-y {
   grid-column: 1;
   grid-row: 1;
-  flex-direction: column-reverse;
-  padding: 0 var(--spacing-small);
-  align-items: flex-end;
-  justify-content: space-between;
+  position: relative;
+  width: var(--spacing-small);
+  margin-left: 26px;
 }
 
 .lineChart__chart-x {
@@ -75,6 +87,11 @@
 
 .lineChart__label-x {
   flex-basis: 100%;
+}
+
+.lineChart__label-y {
+  position: absolute;
+  right: 100%;
 }
 
 .lineChart__data {
